# Quaternion

./: Makefile.am  README.md  configure.ac
doc/: Makefile.am  Quaternion.tex
include/: Quaternion.hpp  QuaternionTest.hpp  TestRoutines.hpp  Utilities.hpp
src/: Quaternion.cpp  TestRoutines.cpp  Utilities.cpp  quaternionTest.cpp  vector.cpp
